--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -384,7 +384,7 @@
 
     <style name="HomeFollowTab" parent="Widget.Design.TabLayout">
         <item name="tabIndicatorHeight">2.5dp</item>
-        <item name="tabBackground">@color/main_tab_color</item>
+        <item name="tabBackground">@color/white</item>
         <item name="tabIndicatorColor">#ffd634</item>
         <item name="android:textSize">15sp</item>
         <item name="android:textColor">#40000000</item>
@@ -443,5 +443,15 @@
         <item name="android:background">#ffffff</item>
         <item name="android:textSize">13sp</item>
         <item name="android:textColor">@color/tran_black2</item>
+    </style>
+
+    <style name="ShopTab" parent="Widget.Design.TabLayout">
+        <item name="tabIndicatorHeight">2.5dp</item>
+        <item name="tabBackground">@color/white</item>
+        <item name="tabIndicatorColor">#ffd634</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:textColor">#40000000</item>
+        <item name="tabSelectedTextColor">#323232</item>
+        <item name="tabTextAppearance">@style/TextAppearance.Design.Tab</item>
     </style>
 </resources>
