--- a/app/src/main/res/drawable/bg_send_vip.xml
+++ b/app/src/main/res/drawable/bg_send_vip.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners android:radius="4dp" />
-    <stroke
-        android:width="0.5dp"
-        android:color="#b9b9b9" />
+    <corners android:radius="15dp" />
+    <solid android:color="#f3f3f3" />
 </shape>
