--- a/app/src/main/res/layout/item_goodnum_shop.xml
+++ b/app/src/main/res/layout/item_goodnum_shop.xml
@@ -6,28 +6,42 @@
     android:gravity="center"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tv_num_item_goodnum"
-        android:layout_width="match_parent"
-        android:layout_height="37dp"
-        android:background="@drawable/bg_5_goodnum"
+    <LinearLayout
+        android:layout_width="84.5dp"
+        android:layout_height="wrap_content"
         android:gravity="center"
-        android:textColor="#9003e1"
-        android:textSize="19sp" />
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/iv_num_item_goodnum"
+            android:layout_width="21.5dp"
+            android:layout_height="21.5dp"
+            android:layout_marginRight="-1dp"
+            android:src="@drawable/ic_pretty_a" />
+
+        <TextView
+            android:id="@+id/tv_num_item_goodnum"
+            android:layout_width="match_parent"
+            android:layout_height="21.5dp"
+            android:background="@drawable/bg_pretty_num_a"
+            android:gravity="center"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+    </LinearLayout>
+
 
     <TextView
         android:id="@+id/tv_price_item_goodnum"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="11dp"
         android:gravity="center"
         android:textColor="@color/text_view"
-        android:textSize="10sp" />
+        android:textSize="12sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
         android:gravity="center"
         android:orientation="horizontal">
 
@@ -36,13 +50,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@drawable/bg_btn_buy_goodnum"
             android:gravity="center"
-            android:paddingBottom="5dp"
-            android:paddingTop="5dp"
+            android:paddingTop="5.5dp"
             android:text="购买"
-            android:textColor="#0da0fd"
-            android:textSize="11sp" />
+            android:textColor="#ff2d4e"
+            android:textSize="12sp" />
 
         <TextView
             android:id="@+id/tv_send_item_goodnum"
@@ -56,6 +68,7 @@
             android:paddingTop="5dp"
             android:text="赠送"
             android:textColor="#909090"
-            android:textSize="11sp" />
+            android:textSize="11sp"
+            android:visibility="gone" />
     </LinearLayout>
 </LinearLayout>
