--- a/app/src/main/res/layout/layout_my_level.xml
+++ b/app/src/main/res/layout/layout_my_level.xml
@@ -5,17 +5,20 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal">
 
-    <ImageView
-        android:id="@+id/iv_level_now"
-        android:layout_width="50dp"
-        android:layout_height="18dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="10dp" />
+    <TextView
+        android:id="@+id/tv_level_now"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:gravity="center|right"
+        android:paddingRight="12.5dp"
+        android:textColor="@color/white"
+        android:textSize="15dp" />
 
     <com.whzl.mengbi.ui.widget.view.rc.RCRelativeLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_weight="3"
         app:round_corner="20dp">
 
         <com.whzl.mengbi.ui.widget.view.CustomProgressBar
@@ -25,11 +28,14 @@
             android:layout_height="20dp" />
     </com.whzl.mengbi.ui.widget.view.rc.RCRelativeLayout>
 
-    <ImageView
-        android:id="@+id/iv_level_next"
-        android:layout_width="50dp"
-        android:layout_height="18dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp" />
+    <TextView
+        android:id="@+id/tv_level_next"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:gravity="center|left"
+        android:paddingLeft="12.5dp"
+        android:textColor="@color/white"
+        android:textSize="15dp" />
 
 </LinearLayout>
